compiler/tests/compiler/must_fail/t_04.rs.exp.err
tests/compiler/must_fail/t_04.rs:3:9: 3:13 error: expected identifier, not array get
        _x[i] : inline! (b1);
        ^^^^^
